--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>{% block title %}{% endblock title %} - Toolify</title>
+    <title>{% block title %}{% endblock title %} - Search Tools</title>
 </head>
 <body>
 
@@ -17,7 +17,7 @@
     <header>
         <nav class='container fade'>
             <span>
-                <a href='/'>Toolify</a>
+                <a href='/'>Search Tools</a>
             </span>
             <div style='display: flex; align-items: center;'>
                 <ul>
@@ -156,8 +156,8 @@
     <footer>
         <div class='footer container'>
             <div>
-                <h2>Toolify</h2>
-                <p>Toolify is your go-to destination for a wide range of free online tools. With our user-friendly interface and simple tools, get your work done quickly and efficiently!</p><br>
+                <h2>Search Tools</h2>
+                <p>Search Tools = user-friendly interface and simple tools, get things done quickly and efficiently!</p><br>
             </div>
             <div>
                 <h2>Tools</h2>
@@ -186,7 +186,7 @@
         </div>
     </footer>
     <div class='footer-credits'>
-        <p>Copyright &copy;<script>document.write(new Date().getFullYear())</script> <span class=""><a href="/">Toolify</a></span> All Rights Reserved</p>
+        <p>Copyright &copy;<script>document.write(new Date().getFullYear())</script> <span class=""><a href="/">Search Tools</a></span> All Rights Reserved</p>
     </div>
     <script src="{% static 'js/script.js' %}"></script>
     <script>
